--- a/client/angular.json
+++ b/client/angular.json
@@ -48,6 +48,8 @@
             "styles": [
               "node_modules/devextreme/dist/css/dx.common.css",
               "node_modules/devextreme/dist/css/dx.light.css",
+              "node_modules/roboto-fontface/roboto/roboto-fontface.css",
+              "node_modules/material-icons/iconfont/material-icons.css",
               "src/assets/sass/lib.scss",
               "src/assets/sass/layout.scss",
               "src/styles.scss"
