--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "@ngrx/store": "~6.0.1",
     "@nguniversal/common": "~6.0.0",
     "@nguniversal/express-engine": "~6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "@ngx-auth/core": "~6.0.0",
     "@ngx-cache/core": "~6.0.0",
     "@ngx-cache/fs-storage": "~6.0.0",
@@ -50,12 +51,15 @@
     "jest": "~23.4.1",
     "jest-junit-reporter": "~1.1.0",
     "jest-preset-angular": "~5.2.3",
+    "material-icons": "^0.2.3",
     "ngx-perfect-scrollbar": "~6.2.0",
     "reflect-metadata": "~0.1.12",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "^6.2.2",
     "rxjs-compat": "~6.2.2",
     "sockjs-client": "^1.1.5",
     "stream": "0.0.2",
+    "ts-loader": "^4.4.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
